--- a/las/_config/packaging/requirements.txt
+++ b/las/_config/packaging/requirements.txt
@@ -1,7 +1,7 @@
 amqp>=2.3.2
 billiard>=3.5.0.4
 celery>=4.2
-Django>=2.2
+Django==2.2.17
 djangorestframework==3.9.3 # waiting for fixes before moving on to next versions
 django-bootstrap-breadcrumbs>=0.9.1
 kombu>=4.2.1
